[package]
name = "rehype-tree-sitter"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tree-sitter-highlight = "0.20.1"
tree-sitter-loader = "0.20.0"
serde = { version = "1.0.188", features = ["derive"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]